--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,7 +8,7 @@
   display: flex;
   height: 100%;
   width: 100%;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
   background-color: rgba(240, 239, 239, 0.233);
 }
