--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-drawer-container class="example-container" autosize>
-  <mat-drawer #drawer class="example-sidenav" mode="side" opened="true">
+  <!-- <mat-drawer #drawer class="example-sidenav" mode="side" opened="true">
     <app-jp-sidebar />
-  </mat-drawer>
+  </mat-drawer> -->
 
   <div class="example-sidenav-content">
     <router-outlet />
