--- a/src/app/pages/fila-atendimento/fila-atendimento.component.css
+++ b/src/app/pages/fila-atendimento/fila-atendimento.component.css
@@ -1,5 +1,5 @@
 .container-fila-espera {
-  width: 90rem;
+  width: 100%;
   height: 100%;
 }
 .card-titulo {
@@ -26,4 +26,12 @@
 }
 .card-listagem {
   margin-top: 2rem;
+}
+.filtro-acoes-fila {
+  display: flex;
+  justify-content: space-between;
+  gap: 16px;
+}
+.fitro-ativo {
+  background-color: #000;
 }
